feat: Add new AI tools and refine existing ones
This commit introduces two new AI-powered tools: AI Detector and AR Lab, expanding EduSphere's capabilities. It also refines the Voice Tutor by updating the model name for native audio preview and fixing real-time input handling. Additionally, the project title and index.html are updated for better branding, and Vite configuration is enhanced to support React plugins and environment variables.

Changes include:
- Integration of `AIDetector` and `ARLab` components into `App.tsx`.
- Updated model name and input logic in `VoiceTutor.tsx`.
- Refined `geminiService.ts` to support `generateLogicPuzzle`.
- Updated `index.html` title and script path.
- Enhanced `vite.config.ts` for React integration and environment variable support.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EduSphere AI - The Future of Learning</title>
+  <title>EduSphere AI - The Ultimate Learning Platform</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +17,7 @@
       background: #ffffff;
       color: #1e293b;
       -webkit-font-smoothing: antialiased;
+      overflow-x: hidden;
     }
 
     /* Zen-Professional Light Mesh Background */
@@ -63,13 +64,13 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3"
   }
 }
 </script>
@@ -77,6 +78,6 @@
 <body>
   <div class="bg-cool-mesh"></div>
   <div id="root"></div>
-  <script type="module" src="./index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
